Correcciones auth